--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,6 @@
   "name": "Youtube Zen Mode",
   "version": "1.0",
   "manifest_version": 2,
-  "matches": ["https://www.youtube.com/*"],
 
   "content_scripts": [
     {
@@ -11,7 +10,7 @@
     }
   ],
 
-  "browser_action": {
+  "page_action": {
     "default_icon": "zenIcon.png"
   }
 }
